--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,11 +55,11 @@ dependencies {
     // Fragment
     implementation "androidx.fragment:fragment-ktx:1.5.0"
     implementation "com.google.code.gson:gson:2.9.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3"
 
 
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.0"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.0"
 
 
     testImplementation 'junit:junit:4.13.2'
